# Bench-MFG

./: .pre-commit-config.yaml  EXPERIMENTS.md  Makefile  README.md  README_GARNET.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: 1_claude-cleanup.yml  1a_claude-structure.yml  1b_claude-lint.yml  1c_claude-config.yml  1d_claude-docker.yml  1e_claude-tests.yml  2_claude-optimize.yml  2a_claude-vectorize.yml  2b_claude-device.yml  2c_claude-network.yml  3_claude-flamegraph.yml
benchmarks/: jax_core_benchmark.py
conf/: config_schema.py  config_utils.py  defaults.yaml
conf/algorithm/: algorithm_schema.py  damped_fixed_point.yaml  omd.yaml  pi.yaml  pso.yaml
conf/environment/: contraction_game.yaml  environemnt_schema.py  four_rooms_obstacles.yaml  kinetic_congestion.yaml  lasry_lions_chain.yaml  mf_garnet.yaml  multiple_equilibria.yaml  no_interaction_game.yaml  potential_game2d.yaml  rock_paper_scissors.yaml  sis_epidemic.yaml
conf/experiment/: experiment.yaml  experiment_scheme.py
conf/logging/: logging.yaml
conf/visualization/: visualization.yaml  visualization_schema.py
config/: defaults.yaml
envs/: __init__.py  mfg_model_class.py  mfg_model_class_jit.py
envs/contraction_game/: contraction_game.py  contraction_game_jit.py
envs/four_rooms_obstacles/: four_rooms_obstacles.py  four_rooms_obstacles_jit.py
envs/kinetic_congestion/: __init__.py  kinetic_congestion.py  kinetic_congestion_jit.py
envs/lasry_lions_chain/: lasry_lions_chain.py  lasry_lions_chain_jit.py
envs/mf_garnet/: mf_garnet.py  mf_garnet_jit.py
envs/multiple_equilibria/: multiple_equilibria.py  multiple_equilibria_jit.py
envs/no_interaction/: no_interaction.py  no_interaction_jit.py
envs/rock_paper_scissors/: __init__.py  rock_paper_scissors.py  rock_paper_scissors_jit.py
envs/sis_epidemic/: __init__.py  sis_epidemic.py  sis_epidemic_jit.py
learner/jax/: fp_jax.py  omd_jax.py  pi_jax.py  pso_jax.py
learner/python/: fp_py.py  omd_py.py  pi_py.py
reports/: network-report.md  vectorize-report.md
results/: garnet_results.csv  garnet_results.tex
results/ContractionGame/: DampedFP_damped_best_models.yaml  OMD_best_models.yaml  PI_boltzmann_policy_iteration_best_models.yaml  PI_smooth_policy_iteration_best_models.yaml  PSO_best_models.yaml
results/ContractionGame_v0/: DampedFP_damped_best_models.yaml  OMD_best_models.yaml  PI_boltzmann_policy_iteration_best_models.yaml  PI_smooth_policy_iteration_best_models.yaml  PSO_best_models.yaml
results/FourRoomsAversion2D/: DampedFP_damped_best_models.yaml  OMD_best_models.yaml  PI_boltzmann_policy_iteration_best_models.yaml  PI_smooth_policy_iteration_best_models.yaml  PSO_best_models.yaml
results/KineticCongestion/: DampedFP_damped_best_models.yaml  OMD_best_models.yaml  PI_boltzmann_policy_iteration_best_models.yaml  PI_smooth_policy_iteration_best_models.yaml  PSO_best_models.yaml
results/LasryLionsChain/: DampedFP_damped_best_models.yaml  OMD_best_models.yaml  PI_boltzmann_policy_iteration_best_models.yaml  PI_smooth_policy_iteration_best_models.yaml  PSO_best_models.yaml
scripts/: patch_flamegraph_colors.py  run_dampedfp.sh  run_garnet_dampedfp.sh  run_garnet_experiments.sh  run_garnet_omd.sh  run_garnet_pi.sh  run_garnet_pso.sh  run_omd.sh  run_pi.sh  run_pso.sh
test/: jax_python_compatibilty.py
tests/: test_python_parallel_fallback.py  test_smoke_jax_kernels.py
utility/: MFGPlots.py  config_utils.py  create_environment.py  create_solver.py  garnet_results_table.py  path_utils.py  plot_npz_results.py  plot_results.py  policy_average.py  run_training.py  save_results.py  wandb_logger.py
(+10916 files in other folders)
